# mimalloc-sys

./: Cargo.toml  README.md  build.rs  wrapper.h
.github/workflows/: linux.yml  windows.yml
src/: lib.rs
