[package]
name = "vey-mimalloc-sys"
version = "0.1.0"
edition = "2024"
links = "mimalloc"
license = "Apache-2.0"
repository = "https://github.com/VEY-OSS/mimalloc-sys.git"
readme = "README.md"
description = "Rust FFI binding to mimalloc"

[dependencies]


[build-dependencies]
bindgen = { version = "0.72.0", default-features = false }
pkg-config = "0.3.9"
vcpkg = "0.2.8"

[features]
default = ["runtime-libclang"]
runtime-libclang = ["bindgen/runtime"]
static-libclang = ["bindgen/static"]
