[package]
name = "vey-mimalloc-sys"
version = "0.2.4+3.4.1"
edition = "2024"
links = "mimalloc"
license = "Apache-2.0"
repository = "https://github.com/VEY-OSS/mimalloc-sys.git"
readme = "README.md"
description = "Rust FFI binding to mimalloc"

[dependencies]


[build-dependencies]
bindgen = { version = "0.72.0", default-features = false }
pkg-config = "0.3.9"
vcpkg = "0.2.8"
cmake = { version = "0.1.58", optional = true }

[features]
default = ["runtime-libclang"]
runtime-libclang = ["bindgen/runtime"]
static-libclang = ["bindgen/static"]
vendored = ["dep:cmake"]
secure = ["vendored"]
